--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "mocha": "^2.2.5",
+    "sinon": "^1.16.1",
     "standard": "^5.1.0"
   }
 }
