Move install step to postinstall script

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/attn/hook-script-runner#readme",
   "main": "lib/Runner.js",
   "scripts": {
+    "postinstall": "./bin/install",
     "prepublish": "babel src --out-dir lib",
     "pretest": "standard src",
     "test": "mocha"
