--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "homepage": "https://github.com/attn/hook-script-runner#readme",
   "main": "lib/Runner.js",
+  "files": [
+    "lib",
+    "bin"
+  ],
   "scripts": {
     "postinstall": "./bin/install",
     "prepublish": "babel src --out-dir lib",
