--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "mocha": "^2.2.5",
+    "rimraf": "^2.4.3",
     "sinon": "^1.16.1",
     "standard": "^5.1.0"
   }
